# music-text

./: .gitignore  .ignore  AACM_Notation.md  ABSTRACTION_DISCUSSION.md  AI_FIRST_DOCUMENTATION_BLOG.md  AST_REFACTOR_PLAN.md  CLAUDE.md  CODE_QUALITY_AUDIT.md  COMMIT_ANALYSIS.md  CONSECUTIVE_NOTATION_IMPLEMENTATION.md  Cargo.toml  DATA_FLOW.md  DRIFT_PREVENTION.md  FSM_TUPLET_ENHANCEMENT_PLAN.md  GRAMMAR_AND_DOMAIN_DECISIONS.md  GRAMMAR_MIGRATION_TECHNOTE.md  LESSONS_LEARNED_V2.md  LEXER_BOX_DRAWING_SLURS_PLAN.md  MULTI_STAVE_IMPLEMENTATION_COMPLETE.md  MULTI_STAVE_IMPLEMENTATION_PLAN.md  MUSIC_TEXT_LANGUAGE_SPECIFICATION.md  MUSIC_TEXT_SPECIFICATION.md  Makefile  PARSER_ARCHITECTURE.md  PIPELINE_ARCHITECTURE.md  RAMDISK.md  README.md  REFACTOR_STAVE_PROCESSING_PLAN.md  REPOSITORY_RENAME_PLAN.md  RHYTHM.md  RHYTHM_SYSTEM.md  SERVER_SIDE_TESTING_METHODOLOGY.md  SPATIAL_ANALYSIS_INTEGRATION_PLAN.md  SPATIAL_ANNOTATION_PLAN.md  SPATIAL_RHYTHM.md  SYLLABLE_SUPPORT_PLAN.md  SYNTHETIC_DATA_README.md  SYNTHETIC_DATA_REQUIREMENTS.md  TECH_NOTE_DATA_MODEL_EVOLUTION.md  TECH_NOTE_GENERIC_PARSER_REFACTOR.md  (+122 more)
.cargo/: config.toml
.claude/: settings.json
archive/: tui_code.rs  web_server.rs
assets/: svg-styles.css
attic/: BEAMING_SPEC.md  BHATKHANDE_NOTATION_SPECIFICATION.md  PLAN_BARLINE_MANDATORY_ARCHITECTURE.md  SLUR_ARCHITECTURAL_CONSIDERATIONS.md  SYLLABLE_SLUR_TODO.md  TECH_NOTE_BARLINE_BASED_ARCHITECTURE.md  TODO.md  TODO_LIST.md
atticnew/: VEXFLOW_BEAT_CENTRIC_REFACTOR.md  VEXFLOW_V2_PLAN.md  server_node_proxy.js  server_old_express.js
bak.current/: analyzer.rs  mod.rs  model.rs  renderer.rs  spatial.rs
bak.gui/: app.rs  mod.rs  skia_renderer.rs  svg_renderer.rs
bak.src/: ast_to_parsed.rs  classifier.rs  lib.rs  main.rs  parser_v2_fsm.rs  pipeline.rs  rhythm.rs  simple_fsm.rs  spatial.rs  stave.rs  stave_analyzer.rs  structure_preserving_fsm.rs  tokenizer.rs  tree_functions.rs  web.rs
benches/: parser_benchmark.rs
docs/: ARCHITECTURE.md  GRAMMAR_REFACTOR_CRITIQUE.md  LILYPOND_TEMPLATE_RESEARCH.md  NAMING_REFACTOR_PLAN.md  RENAMING_PLAN.md  SESSION_CHANGES.md  TECHNOTE_PARSER_ARCHITECTURE.md  TECH_NOTE_GRAMMAR_REFACTOR.md  TECH_NOTE_TABLA_NOTATION.md  TECH_NOTE_WASM_INTEGRATION.md  TESTING_ROADMAP.md  VEXFLOW_INTEGRATION_ANALYSIS.md  algorithm_for_single_line_heuristics_notation_system.md  codemirror_manual.md  reference-grammar.pest  vexflow-integration-guide.md  z.123
documents/: 03ff0ad5-0e94-4411-b120-be8389bce9e8.json  06af547b-561c-4f2c-97a7-5445f5258dbf.json  18edbcea-7632-4c87-aefd-2d7008f9164a.json  3587e6b9-7f03-4148-941c-86be9b9eb226.json  3a05096f-b96b-4ed2-9355-5522b5097e89.json  439385bf-ca71-45e0-b214-a136a39fce06.json  452c77b1-0af5-4fdb-b85a-2d3c087f6934.json  54e589a0-bd29-40a2-ac7b-5953d9ecd027.json  5b00413a-31c6-4830-91bd-6e225b8a1d15.json  61d43309-5435-46b4-9acf-78f6541942e0.json  (+16 more)
examples/: doremi.txt  (+2 more)
(+1047 files in other folders)
