[package]
name = "music-text"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "music-text"
path = "src/main.rs"

[dependencies]
pest = "2.7"
pest_derive = "2.7"
clap = { version = "4.5", features = ["derive", "cargo"] }
clap_complete = "4.5"
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.11"
chrono = { version = "0.4", features = ["serde"] }