[package]
name = "music-text"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "music-text"
path = "src/main.rs"

[profile.dev]
# Development profile optimizations for faster compilation
strip = false
debug = true

[profile.release]
# Release profile optimizations
strip = true
debug = false
lto = true

[features]
default = []

[dependencies]
clap = { version = "4.5", features = ["derive", "cargo"] }
clap_complete = "4.5"
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.11"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4"] }
mustache = "0.9"
fraction = { version = "0.13", features = ["with-serde-support"] }
rustyline = { version = "14.0.0", features = ["derive"] }
regex = "1.10"
once_cell = "1.19"
ratatui = "0.28"
crossterm = "0.28"
reqwest = { version = "0.12", features = ["json"] }
urlencoding = "2.1"


[build-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
